--- a/metro4all/static/css/main.css
+++ b/metro4all/static/css/main.css
@@ -2,8 +2,21 @@ div.container {
     min-width: 600px;
 }
 
-#reportsTable td, th {
+div.row div.reportsTable {
     padding: 0;
+}
+
+div.subtitle {
+    background-color: #2296F4;
+}
+
+div.title {
+    background-color: #3BA1F4;
+}
+
+#reportsTable td, th {
+    padding: 3px 3px;
+    font-family: Roboto, sans-serif;
 }
 
 #reportsTable select {
@@ -20,16 +33,8 @@ div.container {
     text-align: center;
 }
 
-div.row div.reportsTable {
-    padding: 0;
-}
-
-div.subtitle {
-    background-color: #2296F4;
-}
-
-div.title {
-    background-color: #3BA1F4;
+#reportsTable i {
+    font-size: 20px;
 }
 
 div.filter div.collapsible-header {
@@ -49,4 +54,3 @@ div.filter div.select {
         width: 100%;
     }
 }
-
