--- a/metro4all/static/contrib/jtable.2.4.0/themes/metro/metro4all/jtable.css
+++ b/metro4all/static/contrib/jtable.2.4.0/themes/metro/metro4all/jtable.css
@@ -343,12 +343,12 @@ div.jtable-main-container > div.jtable-title div.jtable-toolbar span.jtable-tool
   padding-bottom: 6px;
 }
 div.jtable-main-container > table.jtable {
-  border: 1px solid #2d89ef;
+  border: 1px solid #33b8da;
   border-collapse: collapse;
   border-spacing: 0;
 }
 div.jtable-main-container > table.jtable > thead {
-  background-color: #2d89ef;
+  background-color: #33b8da;
 }
 div.jtable-main-container > table.jtable > thead th {
   font-family: 'Segoe UI Semilight', 'Open Sans', Verdana, Arial, Helvetica, sans-serif;
@@ -427,11 +427,11 @@ div.jtable-main-container > table.jtable > tbody > tr.jtable-child-row > td {
   background-color: #fff;
 }
 div.jtable-main-container > div.jtable-bottom-panel {
-  background-color: #1c78de;
+  background-color: #33b8da;
   color: #fff;
   min-height: 22.900000000000002px;
   font-size: 13px;
-  border: 1px solid #2d89ef;
+  border: 1px solid #33b8da;
   border-top: none;
 }
 div.jtable-main-container > div.jtable-bottom-panel .jtable-page-list {
@@ -444,7 +444,7 @@ div.jtable-main-container > div.jtable-bottom-panel .jtable-page-list .jtable-pa
 div.jtable-main-container > div.jtable-bottom-panel .jtable-page-list .jtable-page-number-previous,
 div.jtable-main-container > div.jtable-bottom-panel .jtable-page-list .jtable-page-number-next,
 div.jtable-main-container > div.jtable-bottom-panel .jtable-page-list .jtable-page-number-active {
-  background-color: #2d89ef;
+  background-color: #33b8da;
   margin: 1px;
   padding: 2px 5px;
   color: #fff;
@@ -459,11 +459,11 @@ div.jtable-main-container > div.jtable-bottom-panel .jtable-page-list .jtable-pa
 div.jtable-main-container > div.jtable-bottom-panel .jtable-page-list .jtable-page-number-disabled {
   opacity: 0.75;
   filter: alpha(opacity=50);
-  color: #ccc;
+  color: #ddd;
   cursor: default;
 }
 div.jtable-main-container > div.jtable-bottom-panel .jtable-page-list .jtable-page-number-disabled:hover {
-  background-color: #2d89ef;
+  background-color: #33b8da;
 }
 div.jtable-main-container > div.jtable-bottom-panel span.jtable-page-info {
   display: inline-block;
