--- a/metro4all/static/js/templates/state_checkbox.mustache
+++ b/metro4all/static/js/templates/state_checkbox.mustache
@@ -1,4 +1,9 @@
-<p class="{{#fixed}}closed{{/fixed}}{{^fixed}}opened{{/fixed}}">
-    <input class="state" type="checkbox" {{#fixed}}checked="checked"{{/fixed}} id="chb-{{id}}"/>
-    <label for="chb-{{id}}">{{#fixed}}Закрыт{{/fixed}}{{^fixed}}Открыт{{/fixed}}</label>
-</p>
+<div class="state" data-state="{{fixed}}">
+    <div class="progress">
+        <div class="indeterminate"></div>
+    </div>
+    <p class="state">
+        <input class="state" type="checkbox"  {{#fixed}}checked="checked"{{/fixed}} id="chb-{{id}}"/>
+        <label for="chb-{{id}}">{{#fixed}}Закрыт{{/fixed}}{{^fixed}}Открыт{{/fixed}}</label>
+    </p>
+</div>
