label span for delete button was hided

--- a/metro4all/static/css/main.css
+++ b/metro4all/static/css/main.css
@@ -103,6 +103,10 @@ div.title {
     font-size: 15px;
 }
 
+#reportsTable button.jtable-delete-command-button span {
+    display: none;
+}
+
 div.filter div.collapsible-header {
     color: #8f8f8f;
 }
